fixed overflow

--- a/css/style.css
+++ b/css/style.css
@@ -34,9 +34,10 @@ body {
   background-color: #fff; 
 }
 
-body {
+html,body {
   overflow-x: hidden;
 }
+
 section{
   overflow-x: hidden;
 }
